package interfaces;

public interface DestinationChangeable {

    void changeDestination(String new_destination);

    String toString();
    boolean equals(Object o);
    int hashCode();

}
