@startuml
class objects.Textile {
+ String spoil()
+ String toString()
}
class people.Hemyl {
+ String fly()
+ String toString()
}
class objects.Wood {
+ String spoil()
+ String toString()
}
abstract class abstractClasses.Person {
- String personAction
- String originalPersonAction
- String name
~ boolean madness
+ void behave_as_somebody_else(Person)
+ void calm_down()
+ String getName()
+ String toString()
+ boolean equals(Object)
+ int hashCode()
}
class people.PreviousOwners {
+ String packStuff()
+ String toString()
}
class people.Mymla {
+ String grumble()
+ String toString()
}
enum objects.DestinationEnum {
+  SOMEWHERE
+  NOWHERE
+  UP
+  DOWN
- String destination
}
abstract class abstractClasses.Handcrafts {
- String material
+ String getMaterial()
+ boolean equals(Object)
+ int hashCode()
}
class objects.Paper {
+ String spoil()
+ String toString()
}
class objects.Door {
- DestinationEnum destination
+ void changeDestination(String)
+ String toString()
+ boolean equals(Object)
+ int hashCode()
}
class objects.Stairs {
- DestinationEnum destination
+ void changeDestination(String)
+ String toString()
+ boolean equals(Object)
+ int hashCode()
}
interface interfaces.Spoilable {
+ {static} String desription
~ String spoil()
~ String toString()
~ boolean equals(Object)
~ int hashCode()
}
class people.Misa {
+ String sing()
+ String toString()
}
class Main {
+ {static} void main(String[])
}
class people.Homsa {
- int numberOfCookies
+ String eatCookies()
+ String addCookies(int)
+ String toString()
}
interface interfaces.DestinationChangeable {
~ void changeDestination(String)
~ String toString()
~ boolean equals(Object)
~ int hashCode()
}


abstractClasses.Handcrafts <|-- objects.Textile
abstractClasses.Person <|-- people.Hemyl
abstractClasses.Handcrafts <|-- objects.Wood
abstractClasses.Person <|-- people.PreviousOwners
abstractClasses.Person <|-- people.Mymla
interfaces.Spoilable <|.. abstractClasses.Handcrafts
abstractClasses.Handcrafts <|-- objects.Paper
interfaces.DestinationChangeable <|.. objects.Door
interfaces.DestinationChangeable <|.. objects.Stairs
abstractClasses.Person <|-- people.Misa
abstractClasses.Person <|-- people.Homsa
@enduml